--- a/mpv.conf
+++ b/mpv.conf
@@ -35,7 +35,8 @@ swapchain-depth=8
 hwdec=d3d11va-copy
 reset-on-next-file=audio-delay,mute,pause,speed,sub-delay,video-aspect,video-pan-x,video-pan-y,video-rotate,video-zoom
 
-keep-open
+# keep-open 会导致 smplayer playlist 在一个视频播放完成后无法自动播放下一个视频
+# keep-open
 
 msg-level=auto_profiles=trace,vo/gpu=v
 
@@ -187,7 +188,8 @@ sub-ass-force-margins=yes
 sub-use-margins=yes
 
 # 默认选中中文字幕
-slang=chi,zh-CN,sc,chs
+# 开启后会导致 smplayer 记忆上次播放时使用的字幕功能不可用。
+# slang=chi,zh-CN,sc,chs
 
 ################
 # Anti-Ringing #
