只有帧率<=40的时候，才启用svp，否则禁用。

--- a/mpv.conf
+++ b/mpv.conf
@@ -32,7 +32,10 @@ swapchain-depth=8
 
 # Only "copy-back" hardware video decoders are compatible with Vapoursynth filters
 # copies video back to system RAM (Windows 8+ only)
-hwdec=d3d11va-copy
+# hwdec=d3d11va-copy
+# hwdec=no
+hwdec=d3d11va
+
 reset-on-next-file=audio-delay,mute,pause,speed,sub-delay,video-aspect,video-pan-x,video-pan-y,video-rotate,video-zoom
 
 # keep-open 会导致 smplayer playlist 在一个视频播放完成后无法自动播放下一个视频
@@ -43,11 +46,6 @@ msg-level=auto_profiles=trace,vo/gpu=v
 #########
 #  SVP  #
 #########
-
-input-ipc-server=mpvpipe
-
-# This one fixes audio desync
-hr-seek-framedrop=no
 
 # "Watch later" feature is not compatible with SVP
 no-resume-playback
@@ -246,6 +244,12 @@ sigmoid-upscaling=yes
 [no-deband]
 profile-desc=cond:((p["video-params/average-bpp"] >= 24))
 deband=no
+
+[svp]
+profile-desc=cond:(p["estimated-vf-fps"]<=40)
+hwdec=d3d11va-copy
+hr-seek-framedrop=no
+input-ipc-server=mpvpipe
 
 ###################################
 # Protocol Specific Configuration #
