--- a/mpv.conf
+++ b/mpv.conf
@@ -182,8 +182,8 @@ deband-grain=0
 #############
 
 # 强制字幕输出到黑边上
-sub-ass-force-margins=yes
-sub-use-margins=yes
+# sub-ass-force-margins=yes
+# sub-use-margins=yes
 
 # 默认选中中文字幕
 # 开启后会导致 smplayer 记忆上次播放时使用的字幕功能不可用。
