感觉auto_profile开启svp的方式，即使没有启动svp，拖动视频的时候，还是会卡顿，所以还是直接强制启用svp好了。

--- a/mpv.conf
+++ b/mpv.conf
@@ -34,7 +34,7 @@ swapchain-depth=8
 # copies video back to system RAM (Windows 8+ only)
 # hwdec=d3d11va-copy
 # hwdec=no
-hwdec=d3d11va
+# hwdec=d3d11va
 
 reset-on-next-file=audio-delay,mute,pause,speed,sub-delay,video-aspect,video-pan-x,video-pan-y,video-rotate,video-zoom
 
@@ -49,6 +49,10 @@ msg-level=auto_profiles=trace,vo/gpu=v
 
 # "Watch later" feature is not compatible with SVP
 no-resume-playback
+
+hwdec=d3d11va-copy
+hr-seek-framedrop=no
+input-ipc-server=mpvpipe
 
 ###########
 # 画质提升 #
@@ -241,15 +245,9 @@ sigmoid-upscaling=yes
 #######
 # 
 # github 上一个 issue 说 10 bit 开启 deband 也是没问题的: [Disable debanding on 10-bit videos.](https://github.com/mpv-player/mpv/issues/3889)
-[no-deband]
-profile-desc=cond:((p["video-params/average-bpp"] >= 24))
-deband=no
-
-[svp]
-profile-desc=cond:(p["estimated-vf-fps"]<=40)
-hwdec=d3d11va-copy
-hr-seek-framedrop=no
-input-ipc-server=mpvpipe
+# [no-deband]
+# profile-desc=cond:((p["video-params/average-bpp"] >= 24))
+# deband=no
 
 ###################################
 # Protocol Specific Configuration #
