adapt to new version mpv & smplayer

--- a/mpv.conf
+++ b/mpv.conf
@@ -52,7 +52,8 @@ no-resume-playback
 
 hwdec=d3d11va-copy
 hr-seek-framedrop=no
-input-ipc-server=mpvpipe
+# input-ipc-server=mpvpipe
+save-position-on-quit=no
 
 ###########
 # 画质提升 #
